# rust-microservices-sandbox

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
RustMicroservicesSandbox/: Cargo.toml
docker/devcontainer/: Dockerfile  cargo-config
docker/images/: Dockerfile
kubernetes/: 01-namespace.yaml  02-mongo-configmap.yaml  03-postgresql-configmap.yaml  04-application-configmap.yaml  05-application-deployment.yaml
kubernetes/kind/: kind-create-cluster-with-registry
src/: main.rs
src/api/: mod.rs
src/api/clients/: MongoDBClient.rs  PostgresClient.rs  mod.rs
src/api/commons/: Errors.rs  mod.rs
src/api/migrations/: MongoDB.rs  PostgreSQL.rs  mod.rs
src/api/services/: mod.rs
src/api/services/customers/: Controller.rs  Model.rs  Repository.rs  Resource.rs  Service.rs  mod.rs
src/api/services/invoices/: Controller.rs  Model.rs  Repository.rs  Resource.rs  Service.rs  mod.rs
src/api/services/orders/: Controller.rs  Model.rs  Repository.rs  Resource.rs  Service.rs  mod.rs
src/api/services/products/: Controller.rs  Model.rs  Repository.rs  Resource.rs  Service.rs  mod.rs
src/api/services/shippings/: Controller.rs  Model.rs  MongoDBSchema.js  Repository.rs  Resource.rs  Service.rs  mod.rs
src/api/services/users/: Controller.rs  Model.rs  Repository.rs  Resource.rs  Service.rs  mod.rs
www/: index.html
www/assets/css/: css.css
