[package]
name = "RustMicroservicesSandbox"
version = "0.1.0"
authors = ["Giuseppe Gessone <g.gessone@teamsystem.com>", "Paolo Giovannini <p.giovannini@teamsystem.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json_env_logger = "0.1"
actix-cors = "0.5"
actix-web = "3"
actix-web-httpauth = "0.5"
async-trait = "0.1"
bytes = "0.6"
chrono = "0.4"
deadpool-postgres = "0.5"
env_logger = "0.8"
futures = "0.3"
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.1"
tokio-postgres = { version = "0.5", features=["with-chrono-0_4"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
#opt-level = 'z'
codegen-units = 1
debug = 0
lto = true
opt-level = 's'
panic = 'abort'