[package]
name = "RustMicroservicesSandbox"
version = "0.1.0"
authors = ["Giuseppe Gessone <g.gessone@teamsystem.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
actix-web = "3"
actix-web-httpauth = "0.5"
actix-cors = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio-postgres = "0.5"
deadpool-postgres = "0.5"
env_logger = "0.8"
# json_env_logger = "0.1"
futures = "0.3"
jsonwebtoken = "7.2"
bytes = "0.6"
bson = "1"
# Waiting the next release for UUID PK:
#   https://github.com/mongodb/bson-rust/issues/174
#   https://github.com/mongodb/bson-rust/commit/e03e95e05a8f8da4d71f088c5e06c62488ba77ce
#bson = { git = "https://github.com/mongodb/bson-rust", branch = "master" }
mongodb = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
actix-rt = "1"

[profile.release]
#opt-level = 'z'
opt-level = 's'
lto = true
codegen-units = 1
panic = 'abort'
debug = 0